# warzone2100

./: ChangeLog  Makefile.am  TODO  autorevision.conf  configure.ac  warzone2100.cbp
data/audio/: audio.cfg
data/base/: gamedesc.lev
data/base/components/bodies/: cybd_std.pie  exbloke.pie  runflame.pie
data/base/script/: rules.js
data/base/script/campaign/: cam1a.js
data/base/stats/: research_cam1.json  templates.json  weapons.json
data/base/tagdefinitions/savegame/: map.def
data/base/wrf/: stats.wrf
data/base/wrf/cam1/: cam1a.wrf  cam1b.wrf  cam1c.wrf  cam1ca.wrf  cam1kevlar.wrf
data/base/wrf/cam1/cam1a/: labels.ini
data/mp/multiplay/skirmish/: default.js  default.json  nexus.slo  rules.js
data/mp/stats/: functions.txt  propulsion.ini  research.ini  research.json  structure.ini  structure.json  structures.txt  templates.json  weapons.json
data/mp/wrf/: stats.wrf
doc/: ScriptingManual.htm
lib/betawidget/src/: Makefile.am
lib/betawidget/tools/: Makefile.am
lib/exceptionhandler/: Makefile.am
lib/framework/: Makefile.am  cursors.h  input.h  resource_lexer.l  strres.cpp  strres.h  strres_lexer.l
lib/gamelib/: Makefile.am  audp_parser.y
lib/iniparser/: Makefile.am
lib/ivis_common/: Makefile.am
lib/ivis_opengl/: Makefile.am  imdload.cpp  ivisdef.h  pieblitfunc.cpp  pieblitfunc.h  piedraw.cpp  piematrix.cpp  piematrix.h  piestate.cpp  piestate.h  pietypes.h
lib/netplay/: Makefile.am  netplay.cpp
lib/netplay/miniupnpc/: Makefile.am  makefile.win32  minisoap.c  miniupnpc.c  miniwget.c  upnpcommands.cpp  upnpreplyparse.cpp
lib/script/: Makefile.am  chat_lexer.l  stack.c
lib/sdl/: cursors_sdl.cpp  main_sdl.cpp
lib/sequence/: Makefile.am
lib/sound/: Makefile.am  Makefile.raw  audio.cpp  audio_id.cpp  audio_id.h  audio_id.hpp  buffer.cpp  buffer.h  cdaudio.cpp  constants.cpp  constants.hpp  context.cpp  context.hpp  decoding.cpp  decoding.hpp  interface.cpp  openal_track.cpp  playlist.cpp  playlist.h  playlist.hpp  sound.h  soundbase.cpp  soundbase.h  soundbase.hpp  source.cpp  source.h  source.hpp  stream.cpp  stream.h  stream.hpp  stringconv.hpp  templates.hpp  track.cpp  track.h  track.hpp  tracklib.h  types.h
lib/sound/bases/: geometry.hpp  vertex.hpp
lib/sound/general/: Makefile.am  databuffer.cpp  databuffer.hpp  geometry.hpp  physfs_stream.hpp  raii_counter.hpp
lib/sound/interface/: Makefile.am  audio_id.h  devicelist.cpp  devicelist.hpp  stringarray.cpp  stringarray.hpp
lib/sound/openal/: Makefile.am  buffer.cpp  buffer.hpp  context.cpp  context.hpp  device.cpp  device.hpp  devicelist.cpp  devicelist.hpp  exception.cpp  exception.hpp  source.cpp  source.hpp
lib/sound/sound/: channel.cpp  channel.hpp  sample.hpp  source.cpp  source.hpp  source_lock.cpp  source_lock.hpp  source_pool.cpp  source_pool.hpp  track.cpp  track.hpp  track_sample.cpp  track_sample.hpp
lib/widget/: Makefile.am  bar.cpp  button.cpp  editbox.cpp  editbox.h  form.cpp  label.cpp  slider.cpp  tip.cpp  widgbase.h  widget.cpp  widget.h
macosx/Warzone.xcodeproj/: project.pbxproj
makerules/: common.mk  configure.mk  lib.mk
po/: POTFILES.in  update-po.sh
src/: Makefile.am  Warzone2100.vcxproj  Warzone2100.vcxproj.filters  action.c  action.cpp  action.h  actiondef.h  ai.cpp  astar.c  astar.cpp  aud.c  basedef.h  baseobject.cpp  bucket3d.cpp  cdspan.c  challenge.cpp  cheat.cpp  cluster.cpp  combat.c  combat.cpp  component.cpp  component.h  configuration.c  configuration.cpp  console.c  cursorselection  data.c  data.cpp  design.c  design.cpp  design.h  display.c  display.cpp  display.h  display3d.c  display3d.cpp  display3d.h  drive.c  drive.cpp  droid.c  (+131 more)
tests/: lint.cpp
tools/3ds2pie/: 3ds2pie.c
tools/lobbyserver_cpp/src/lobby/: lobby.cpp
tools/map/: Makefile.am  terrainconv.cpp
